--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "html5-qrcode": "^2.3.8",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "react-qr-reader": "^3.0.0-beta-1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
