--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dayjs": "^1.11.12",
     "html5-qrcode": "^2.3.8",
     "next": "14.2.5",
     "react": "^18",
